# knowledge_agent

./: .gitmodules  ARCHITECTURE.md  CHATBOX_CONFIG.md  QUICK_START.md  README.md  README_WEB_ACCESS.md  SEARCH_ENGINE_USAGE.md  SSE_SOLUTION_SUMMARY.md  START_GUIDE.md  config.yaml  env.yaml  knowledge_agent.db  knowledge_agent_server.py  mcp_web_proxy.py  pyproject.toml  pytest.ini  requirements.txt  server.py  setup.py  start_sse_demo.py  start_web_demo.bat  start_with_cors_fix.py  stop_server.py  test_list_fix.py  test_web_proxy.py  view_logs.py  web_client_example.html  如何使用.md  最终解决方案.md
.kiro/agents/: spec-task-implementer.md
.kiro/steering/: spec-subagent-workflow.md
core/: __init__.py  component_registry.py  config_manager.py  data_import_export.py  exceptions.py  knowledge_agent_core.py  monitoring.py  security_validator.py  source_type_detector.py
core/models/: tag.py  (+7 more)
knowledge_agent/: __init__.py  config.yaml
prompts/: __init__.py  knowledge_prompts.py
resources/: __init__.py  knowledge_resources.py
search_index/: MAIN_0xz05ttrlal6pnhm.seg  MAIN_1k5g5jfmfr0fxaw1.seg  MAIN_20828ycwuwt0k5cj.seg  MAIN_fw9ci6vj2z538j2x.seg  MAIN_g49jud4ly1ydwtpz.seg  MAIN_r9vwukfzp1y21byb.seg  MAIN_yjju9scof0m3dejj.seg  _MAIN_0.toc  _MAIN_1.toc  _MAIN_52.toc  _MAIN_61.toc
servers-main/: README.md  SECURITY.md  package-lock.json
test_index/: _MAIN_0.toc
tests/: test_integration.py  test_search_content_size.py
tests_and_docs/: README.md
tools/: __init__.py  knowledge_collect.py  knowledge_crud.py  knowledge_organize.py  knowledge_search.py  knowledge_system.py
(+165 files in other folders)
