[project]
name = "personal-knowledge-agent"
version = "0.1.0"
description = "Personal Knowledge Management MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.5",
    "black>=25.9.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",
    "pypdf>=5.0.0",
    "whoosh>=2.7.4",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
